--- a/bdk_core/Cargo.toml
+++ b/bdk_core/Cargo.toml
@@ -15,6 +15,7 @@ hashbrown = { version = "0.12.1" , optional = true }
 
 [dev-dependencies]
 rand = "0.8.5"
+proptest = "1"
 
 [features]
 default = ["std"]
