--- a/bdk_core/Cargo.toml
+++ b/bdk_core/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 bitcoin = { version = "0.29" }
-# miniscript = { path = "../../rust-miniscript" }
+miniscript = { git = "https://github.com/llfourn/rust-miniscript",  rev = "82ba3928cc594a7ddf2710e145862c89f7702bd3", optional = true }
 serde_crate = { package = "serde", version = "1", optional = true, features = ["derive"] }
 # Use hashbrown as a feature flag to have HashSet and HashMap from it.
 hashbrown = { version = "0.12.1" , optional = true }
@@ -19,6 +19,3 @@ rand = "0.8.5"
 default = ["std"]
 std = []
 serde = ["serde_crate", "bitcoin/serde"]
-
-# [patch.crates-io]
-# miniscript = { git =  "https://github.com/llfourn/rust-miniscript", rev = "2d351c08caca292e8710d74b950bc200f5a539cc" }
