--- a/bdk_core_example/Cargo.toml
+++ b/bdk_core_example/Cargo.toml
@@ -10,3 +10,4 @@ bdk_core = { path = "../bdk_core", features = ["miniscript", "serde"]  }
 anyhow = "1"
 bdk_esplora = { path = "../bdk_esplora" }
 bincode = {  version = "2.0.0-rc.2", features = ["serde"] }
+serde = "1"
