--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
     "bdk_core",
     "bdk_esplora",
     "bdk_core_example",
-    "bdk_keychain"
+    "bdk_keychain",
+    "bdk_file_store"
 ]
