--- a/bdk_esplora_example/Cargo.toml
+++ b/bdk_esplora_example/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ureq = { version = "2", features = ["json"] }
+# BDK Core
 bdk_core = { path = "../bdk_core", features = ["serde"] }
+bdk_cli = { path = "../bdk_cli_lib"}
 bdk_keychain = { path = "../bdk_keychain" }
 bdk_file_store = { path = "../bdk_file_store"}
-serde = { version = "1", features = ["derive"] }
-bdk_cli = { path = "../bdk_cli_lib"}
+
+# Esplora
 esplora-client = { git = "https://github.com/rajarshimaitra/rust-esplora-client.git", branch = "get_recent_blocks"}
