Add a electrum syncing example
The electrum sync is done in two steps.
 - `wallet_txid_scan` returns a candidate `KeychainScan` with TxGraph
 data.
 - The candidate is compared with tracker's `SparseChain`, and list of
 new tx data to fetch is derived from the `ChangeSet`.
 - New transactions are fetched in batch and added into the `KeychainScan`
 update.
 - Apply the final `KeychainScan` on tracker and DB.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "bdk_core",
     "bdk_cli_lib",
     "bdk_esplora_example",
+    "bdk_electrum_example",
     "bdk_keychain",
     "bdk_file_store"
 ]
