Add a RPC syncing example.
Similar to electrum, RPC sync is done in two steps.

 - get all the newly added txid from and initial wallet sync.
 This stage also includes the reorg detection.

 - Fetch the txs not already stpred in the TxGraph and complete the final
 update structure.

 - Apply the update to both tracker and database.

 Note: The current approach of RPC syncing with a corresponding internal
 core wallet, cannot do random script pubkey scanning.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ members = [
     "bdk_esplora_example",
     "bdk_electrum_example",
     "bdk_tmp_plan",
-    "bdk_coin_select"
+    "bdk_coin_select",
+    "bdk_rpc_wallet_example",
 ]
