Move planning module into repo
and move coin select into its own module

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ members = [
     "bdk_cli_lib",
     "bdk_esplora_example",
     "bdk_keychain",
-    "bdk_file_store"
+    "bdk_file_store",
+    "bdk_tmp_plan",
+    "bdk_coin_select"
 ]
