--- a/bdk_cli_lib/Cargo.toml
+++ b/bdk_cli_lib/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 # BDK Core
-bdk_core = { path = "../bdk_core", features = ["serde", "miniscript"]}
+bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript"]}
 bdk_file_store = { path = "../bdk_file_store"}
 bdk_tmp_plan = { path = "../bdk_tmp_plan" }
 bdk_coin_select = { path = "../bdk_coin_select" }
