--- a/bdk_tmp_plan/Cargo.toml
+++ b/bdk_tmp_plan/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bdk_core = {  path = "../bdk_core", features = ["miniscript"] }
+bdk_chain = {  path = "../bdk_chain", features = ["miniscript"] }
 
 [features]
 default = ["std"]
