--- a/bdk_chain/Cargo.toml
+++ b/bdk_chain/Cargo.toml
@@ -11,6 +11,7 @@ serde_crate = { package = "serde", version = "1", optional = true, features = ["
 # Use hashbrown as a feature flag to have HashSet and HashMap from it.
 hashbrown = { version = "0.12.1" , optional = true }
 miniscript = { version = "9.0.0", optional = true  }
+bincode = { version = "2.0.0-rc.2", optional = true }
 
 [dev-dependencies]
 rand = "0.8.5"
@@ -18,4 +19,5 @@ rand = "0.8.5"
 [features]
 default = ["std"]
 std = []
-serde = ["serde_crate", "bitcoin/serde"]
+serde = ["serde_crate", "bitcoin/serde", "bincode/serde"]
+file_store = ["std", "bincode", "serde", "miniscript"]
