--- a/bdk_esplora_example/Cargo.toml
+++ b/bdk_esplora_example/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2021"
 
 [dependencies]
 # BDK Core
-bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript"] }
-bdk_cli = { path = "../bdk_cli_lib"}
-bdk_file_store = { path = "../bdk_file_store"}
+bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript", "file_store"] }
+bdk_cli = { path = "../bdk_cli_lib" }
 
 # Esplora
 esplora-client = { git = "https://github.com/rajarshimaitra/rust-esplora-client.git", branch = "get_recent_blocks"}
