--- a/bdk_chain/Cargo.toml
+++ b/bdk_chain/Cargo.toml
@@ -14,10 +14,10 @@ miniscript = { version = "9.0.0", optional = true  }
 bincode = { version = "2.0.0-rc.2", optional = true }
 
 [dev-dependencies]
-rand = "0.8.5"
+rand = "0.8"
 
 [features]
-default = ["std"]
+default = ["std", "miniscript"]
 std = []
 serde = ["serde_crate", "bitcoin/serde", "bincode/serde"]
 file_store = ["std", "bincode", "serde", "miniscript"]
