Implement coin grouping for coin selection
Coin Grouping allow us to improve the privacy of our wallet.
This current implement groups coins by address reuse. By spending
coins locked by thesame script in one transaction we avoid the
potential privacy loss of spending it across many transactions.

--- a/bdk_coin_select/Cargo.toml
+++ b/bdk_coin_select/Cargo.toml
@@ -6,6 +6,7 @@ authors = [ "LLFourn <lloyd.fourn@gmail.com>" ]
 
 [dependencies]
 bdk_chain = { path = "../bdk_chain" }
+bdk_tmp_plan = { path = "../bdk_tmp_plan" }
 
 [features]
 default = ["std"]
