--- a/bdk_chain/Cargo.toml
+++ b/bdk_chain/Cargo.toml
@@ -2,6 +2,8 @@
 name = "bdk_chain"
 version = "0.1.0"
 edition = "2021"
+description = "Collection of core structures for Bitcoin Dev Kit."
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
