--- a/bdk_chain/Cargo.toml
+++ b/bdk_chain/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "bdk_chain"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
+homepage = "https://bitcoindevkit.org"
+repository = "https://github.com/LLFourn/bdk_core_staging"
+documentation = "https://docs.rs/bdk_chain"
 description = "Collection of core structures for Bitcoin Dev Kit."
 license = "MIT OR Apache-2.0"
+readme = "../README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,7 +15,7 @@ license = "MIT OR Apache-2.0"
 bitcoin = { version = "0.29" }
 serde_crate = { package = "serde", version = "1", optional = true, features = ["derive"] }
 # Use hashbrown as a feature flag to have HashSet and HashMap from it.
-hashbrown = { version = "0.12.1" , optional = true }
+hashbrown = { version = "0.13.2" , optional = true }
 miniscript = { version = "9.0.0", optional = true  }
 bincode = { version = "2.0.0-rc.2", optional = true }
 
