--- a/bdk_esplora_example/Cargo.toml
+++ b/bdk_esplora_example/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2021"
 # BDK Core
 bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript", "file_store"] }
 bdk_cli = { path = "../bdk_cli_lib" }
-
-# Esplora
+serde = { version = "1", features = ["derive"] }
 esplora-client = { git = "https://github.com/rajarshimaitra/rust-esplora-client.git", branch = "get_recent_blocks"}
+
+[dev-dependencies]
+lazy_static = "1.4.0"
+electrsd = { version = "0.22.0", features = ["legacy", "esplora_a33e97e1", "bitcoind_22_0"] }
+
