Allow electrum to create update with outpoints and txids
* `ElectrumClient` now has a main method `scan` which takes in
  `ScanParams` (which allows the caller to specify spks, txids,
  outpoints, txs to scan for). A `ScanUpdate` is returned, which
  can be applied to the tracker.
* The `ElectrumError::Reorg` variant is removed, and reorg is
  handled by retry logic internally.
* The `ElectrumChainPosition` trait is introduced to allow
  `ElectrumClient` to update for any `ChainPosition` type.
* Add convenience methods to `ChainGraph`.
* Add convenience methods to `KeychainTracker`.

--- a/bdk_electrum_example/Cargo.toml
+++ b/bdk_electrum_example/Cargo.toml
@@ -11,4 +11,6 @@ bdk_cli = { path = "../bdk_cli_lib" }
 bdk_file_store = { path = "../bdk_file_store" }
 
 # Electrum
+# electrum-client = { git = "https://github.com/evanlinjin/rust-electrum-client", branch = "batch-raw" }
 electrum-client = { version = "0.12" }
+serde_json = { version = "1.0" }
