Move `ElectrumClient` into it's own package `bdk_electrum`
Side effects:

Because the `Broadcast` trait is part of the `bdk_cli` package (which
should not be imported bv `bdk_electrum`, we need a "wrapped" structure
`bdk_electrum_example::WrappedClient`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "bdk_file_store",
     "bdk_cli_lib",
     "bdk_esplora_example",
+    "bdk_electrum",
     "bdk_electrum_example",
     "bdk_tmp_plan",
     "bdk_coin_select"
