--- a/bdk_electrum_example/Cargo.toml
+++ b/bdk_electrum_example/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 [dependencies]
 # BDK Core
 bdk_chain = { path = "../bdk_chain", features = ["serde"] }
-bdk_cli = { path = "../bdk_cli_lib" }
 bdk_file_store = { path = "../bdk_file_store" }
+bdk_cli = { path = "../bdk_cli_lib"}
+bdk_electrum = { path = "../bdk_electrum" }
 
 # Electrum
 # electrum-client = { git = "https://github.com/evanlinjin/rust-electrum-client", branch = "batch-raw" }
