Move `bdk_esplora` (lib) out of `bdk_esplora_example` (bin)
* Remove `bdk_esplora::UpdateError` and use reorg mitigation logic
* Add ability to scan for outpoints and txids to `bdk_esplora`
* Add scan with outpoint/txid to `bdk_esplora_example`
* Make `parallel_requests` passed-in
* Use an extension trait `EsploraClientExt` for `bdk_esplora`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "bdk_chain",
     "bdk_file_store",
     "bdk_cli_lib",
+    "bdk_esplora",
     "bdk_esplora_example",
     "bdk_electrum",
     "bdk_electrum_example",
