--- a/bdk_esplora/Cargo.toml
+++ b/bdk_esplora/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bdk_esplora_example"
+name = "bdk_esplora"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,4 @@ edition = "2021"
 
 [dependencies]
 bdk_chain = { version = "0.2", features = ["serde", "miniscript"] }
-bdk_cli = { path = "../bdk_cli_lib" }
-bdk_file_store = { path = "../bdk_file_store" }
-bdk_esplora = { path = "../bdk_esplora" }
+esplora-client = { version = "0.3" }
