--- a/bdk_esplora_example/Cargo.toml
+++ b/bdk_esplora_example/Cargo.toml
@@ -9,6 +9,4 @@ edition = "2021"
 bdk_chain = { path = "../bdk_chain", version = "0.3", features = ["serde", "miniscript"] }
 bdk_cli = { path = "../bdk_cli_lib" }
 bdk_file_store = { path = "../bdk_file_store" }
-
-# Esplora
-esplora-client = { git = "https://github.com/rajarshimaitra/rust-esplora-client.git", branch = "get_recent_blocks"}
+bdk_esplora = { path = "../bdk_esplora" }
