--- a/bdk_esplora_example/Cargo.toml
+++ b/bdk_esplora_example/Cargo.toml
@@ -10,9 +10,8 @@ edition = "2021"
 bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript", "file_store"] }
 bdk_cli = { path = "../bdk_cli_lib" }
 serde = { version = "1", features = ["derive"] }
-esplora-client = { git = "https://github.com/rajarshimaitra/rust-esplora-client.git", branch = "get_recent_blocks"}
+esplora-client = { version = "0.3.0", default-features = false, features = ["blocking"] }
 
 [dev-dependencies]
-lazy_static = "1.4.0"
 electrsd = { version = "0.22.0", features = ["legacy", "esplora_a33e97e1", "bitcoind_22_0"] }
 
