--- a/bdk_cli_lib/Cargo.toml
+++ b/bdk_cli_lib/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 # BDK Core
-bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript", "file_store"]}
+bdk_chain = { path = "../bdk_chain", features = ["serde", "miniscript"]}
 bdk_tmp_plan = { path = "../bdk_tmp_plan" }
 bdk_coin_select = { path = "../bdk_coin_select" }
+bdk_file_store = { path = "../bdk_file_store" }
 # Auxiliaries
 clap = { version = "4", features = ["derive", "env"] }
 anyhow = "1"
