--- a/bdk_coin_select/Cargo.toml
+++ b/bdk_coin_select/Cargo.toml
@@ -3,9 +3,8 @@ name = "bdk_coin_select"
 version = "0.0.1"
 authors = [ "LLFourn <lloyd.fourn@gmail.com>" ]
 
-
 [dependencies]
-bdk_chain = { path = "../bdk_chain" }
+bdk_chain = { version = "0.1" }
 
 [features]
 default = ["std"]
