--- a/bdk_file_store/Cargo.toml
+++ b/bdk_file_store/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-bdk_chain = { path = "../bdk_chain", features = [ "serde" ] }
+bdk_chain = { path = "../bdk_chain", features = [ "serde", "miniscript" ] }
 bincode = { version = "2.0.0-rc.2", features = [ "serde" ] }
-miniscript = { version = "9.0.0" }
 serde = { version = "1", features = ["derive"] }
