--- a/bdk_file_store/Cargo.toml
+++ b/bdk_file_store/Cargo.toml
@@ -3,6 +3,11 @@ name = "bdk_file_store"
 version = "0.0.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+homepage = "https://bitcoindevkit.org"
+repository = "https://github.com/LLFourn/bdk_core_staging"
+documentation = "https://docs.rs/bdk_file_store"
+description = "Flat file persistance for Bitcoin Dev Kit."
+readme = "README.md"
 
 [dependencies]
 bdk_chain = { version = "0.3", features = [ "serde", "miniscript" ] }
